// dialogues/dialogues.proto
syntax = "proto3";

package dialogues;


service DialoguesService {
  rpc FindOne (DialoguesRequestById) returns (DialoguesSingleResponse) {}
  // rpc FindAll (DialoguesRequestById) returns (DialoguesAllResponse) {}
}

message DialoguesRequestById {
  int32 id = 1;
}

// message DialoguesSingleResponse {
//   Dialogue dialogue = 1;
// }

// message DialoguesAllResponse {
//   repeated Dialogue dialogues = 1;
// }

message DialoguesSingleResponse {
  string id  = 1;
  string datetime = 2;
  string memo  = 3;
  string bossId  = 4;
  string memberId  = 5;
}